--- a/index.html
+++ b/index.html
@@ -21,13 +21,17 @@
             <img src="./asset/img/photo/img_00.png" alt="img_00" class="img_section_top">
       </section>
       <section class="section_01">
-        <img src="./asset/img/photo/img_01.png" alt="img_01">
+        <div class="inner">
+          <div class="container">
+            <img src="./asset/img/photo/img_01.png" alt="img_01">
+          </div>
+        </div>
       </section>
-      <seciton class="section_point01">
+      <section class="section_point01">
         <div class="inner">
           <div class="container"><img src="./asset/img/photo/img_point01.png" alt="img_point01"></div>
         </div>
-      </seciton>
+      </section>
       <section class="point01_slide">
         <div class="inner">
           <div class="container">
@@ -38,11 +42,11 @@
           </div>
         </div>
       </section>
-      <seciton class="section_point02">
+      <section class="section_point02">
         <div class="inner">
           <div class="container"><img src="./asset/img/photo/img_point02.png" alt="img_point01"></div>
         </div>
-      </seciton>
+      </section>
       <section class="point02_slide">
         <div class="inner">
           <div class="container">
@@ -55,11 +59,11 @@
           </div>
         </div>
       </section>
-      <seciton class="section_point03">
+      <section class="section_point03">
         <div class="inner">
           <div class="container"><img src="./asset/img/photo/img_point03.png" alt="img_point01"></div>
         </div>
-      </seciton>
+      </section>
       <section class="point03_slide">
         <div class="inner">
           <div class="container">
@@ -71,11 +75,11 @@
           </div>
         </div>
       </section>
-      <seciton class="section_point04">
+      <section class="section_point04">
         <div class="inner">
           <div class="container"><img src="./asset/img/photo/img_point04.png" alt="img_point01"></div>
         </div>
-      </seciton>
+      </section>
       <section class="point04_slide">
         <div class="inner">
           <div class="container">
@@ -89,22 +93,33 @@
           </div>
         </div>
       </section>
-      <seciton class="section_point04_bottom">
+      <section class="section_point04_bottom">
         <div class="inner">
           <div class="container"><img src="./asset/img/photo/img_point04_bottom.png" alt="img_point01"></div>
         </div>
-      </seciton>
+      </section>
       <section class="section_gift">
-<img src="./asset/img/photo/img_gift.png" alt="img">
+        <div class="inner">
+          <div class="container">
+            <img src="./asset/img/photo/img_gift.png" alt="img">
+          </div>
+        </div>
       </section>
       <section class="section_tokutenn">
-        <img src="./asset/img/photo/img_tokutenn.png" alt="img">
+        <div class="inner">
+          <div class="contianer">
+            <img src="./asset/img/photo/img_tokutenn.png" alt="img">
+          </div>
+        </div>
       </section>
       <section class="section_max120">
-<img src="./asset/img/photo/img_max120.png" alt="img">
+        <div class="inner">
+          <div class="container">
+            <img src="./asset/img/photo/img_max120.png" alt="img">
+          </div>
+        </div>
       </section>
     </main>
   </div>
 </body>
-
 </html>
