--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       </section>
       <section class="section_tokutenn">
         <div class="inner">
-          <div class="contianer">
+          <div class="container">
             <img src="./asset/img/photo/img_tokutenn.png" alt="img">
           </div>
         </div>
